@@ -1,5 +1,8 @@
 2010-04-10  Torbjorn Granlund  <tege@gmplib.org>
 
+	* mpn/x86/aors_n.asm: Use operand-less shift-by-1 insn form.
+	* mpn/x86/pentium/aors_n.asm: Likewise.
+
 	* mpn/x86_64/pentium4/aors_n.asm: Let non-nc code fall into nc code.
 
 	* mpn/x86_64/pentium4/rsh1aors_n.asm: New file.
